[gd_scene load_steps=4 format=3 uid="uid://pqk4dfi5b3wv"]

[ext_resource type="Texture2D" uid="uid://ds7qs5sqygxcs" path="res://icon.svg" id="1_8hcdg"]
[ext_resource type="Script" path="res://scene/item/item.gd" id="1_jcu13"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7n8xx"]
size = Vector2(119, 117.25)

[node name="Item" type="Node2D"]
z_index = 2
script = ExtResource("1_jcu13")

[node name="ShadowArea" type="Area2D" parent="."]

[node name="ShadowSprite" type="Sprite2D" parent="ShadowArea"]
self_modulate = Color(1, 1, 1, 0.498039)
texture = ExtResource("1_8hcdg")

[node name="ShadowCollision" type="CollisionShape2D" parent="ShadowArea"]
shape = SubResource("RectangleShape2D_7n8xx")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_8hcdg")

[node name="ItemArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemArea"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_7n8xx")

[connection signal="area_entered" from="ShadowArea" to="." method="_on_shadow_area_area_entered"]
[connection signal="area_exited" from="ShadowArea" to="." method="_on_shadow_area_area_exited"]
